--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
     <section class="service-details-area p-t-130 p-b-130">
         <div class="container">
             <div class="service-details-content">
-                <h2 class="service-title">About Etherial: Ecommerce Development Agency</h2>
+                <h2 class="service-title">About Etherial:</h2>
 
                 <p class="m-b-30">Welcome to Etherial, your premier Shopify agency for all things e-commerce and web development. Our team of skilled and innovative professionals is dedicated to turning your online store dreams into reality. With a passion for creating captivating and high-converting websites, we strive to deliver exceptional solutions that not only elevate your brand but also drive tangible results. <br> <br>
 
