--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                             </div>
                             <div class="info-body">
                                 <h5 class="title">Email Address</h5>
-                                <p><a href="mailto:ayush@etherial.uk">ayush@etherial.uk</a></p>
+                                <p><a href="mailto:mike@etherial.uk">mike@etherial.uk</a></p>
                                 <p><a href="www.etherial.uk" target="_blank">www.etherial.uk</a></p>
                             </div>
                         </div>
@@ -273,9 +273,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:ayush@etherial.uk">
+                                    <a href="mailto:mike@etherial.uk">
                                         <i class="fal fa-envelope-open-text"></i>
-                                        ayush@etherial.uk
+                                        mike@etherial.uk
                                     </a>
                                 </li>
                             </ul>
