--- a/services.html
+++ b/services.html
@@ -451,9 +451,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:ayush@etherial.uk">
+                                    <a href="mailto:mike@etherial.uk">
                                         <i class="fal fa-envelope-open-text"></i>
-                                        ayush@etherial.uk
+                                        mike@etherial.uk
                                     </a>
                                 </li>
                             </ul>
