--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         </li>
                         <li>
                             <i class="far fa-envelope-open"></i>
-                            <a href="mailto:ayush@etherial.uk">ayush@etherial.uk</a>
+                            <a href="mailto:mike@etherial.uk">mike@etherial.uk</a>
                             <a href="www.etherial.uk" target="_blank">www.etherial.uk</a>
                         </li>
                     </ul>
@@ -185,7 +185,7 @@
                             </p>
                             <ul class="hero-btns d-flex align-items-center">
                                 <li data-animation="fadeInUp" data-delay="0.5s">
-                                    <a href="mailto:ayush@etherial.uk"  class="template-btn primary-bg-4 shadow-none">
+                                    <a href="mailto:mike@etherial.uk"  class="template-btn primary-bg-4 shadow-none">
                                        Email directly <i class="fas fa-arrow-right"></i>
                                     </a>
                                 </li>
@@ -370,7 +370,7 @@
 
                         <ul class="cta-btns justify-content-center">
                             <li class="wow fadeInUp" data-wow-delay="0.2s">
-                                <a href="mailto:ayush@etherial.uk"  class="template-btn primary-bg-4 shadow-none">
+                                <a href="mailto:mike@etherial.uk"  class="template-btn primary-bg-4 shadow-none">
                                    Contact Directly <i class="fas fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -533,9 +533,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:ayush@etherial.uk">
+                                    <a href="mailto:mike@etherial.uk">
                                         <i class="fal fa-envelope-open-text"></i>
-                                        ayush@etherial.uk
+                                        mike@etherial.uk
                                     </a>
                                 </li>
                             </ul>
