--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="info-body">
                                 <h5 class="title">Our Location</h5>
-                                <p>399, Ganga Nagar Dewas, India</p>
+                                <p>3225 Columbia Road, Wrangle Hill, DE</p>
                             </div>
                         </div>
                         <div class="contact-info-box m-b-30 wow fadeInUp" data-wow-delay="0.4s">
@@ -190,7 +190,7 @@
                             </div>
                             <div class="info-body">
                                 <h5 class="title">Email Address</h5>
-                                <p><a href="mailto:mike@etherial.uk">mike@etherial.uk</a></p>
+                                <p><a href="mailto:connect@etherial.uk">connect@etherial.uk</a></p>
                                 <p><a href="www.etherial.uk" target="_blank">www.etherial.uk</a></p>
                             </div>
                         </div>
@@ -269,13 +269,13 @@
                                 <li>
                                     <a href="#">
                                         <i class="fal fa-map-marker-alt"></i>
-                                       399, Ganga Nagar Dewas, India
+                                       3225 Columbia Road, Wrangle Hill, DE
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:mike@etherial.uk">
+                                    <a href="mailto:connect@etherial.uk">
                                         <i class="fal fa-envelope-open-text"></i>
-                                        mike@etherial.uk
+                                        connect@etherial.uk
                                     </a>
                                 </li>
                             </ul>
