--- a/services.html
+++ b/services.html
@@ -447,13 +447,13 @@
                                 <li>
                                     <a href="#">
                                         <i class="fal fa-map-marker-alt"></i>
-                                       399, Ganga Nagar Dewas, India
+                                       3225 Columbia Road, Wrangle Hill, DE
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="mailto:mike@etherial.uk">
+                                    <a href="mailto:connect@etherial.uk">
                                         <i class="fal fa-envelope-open-text"></i>
-                                        mike@etherial.uk
+                                        connect@etherial.uk
                                     </a>
                                 </li>
                             </ul>
